# ChangeLog for app-text/texlive-source
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  +files/2007/tetex-3.0-CVE-2007-0650.patch, texlive-source-2007.ebuild:
  Add a patch from redhat for a buffer overflow in makeindex, see
  https://bugs.gentoo.org/show_bug.cgi?id=170861 and
  https://bugzilla.redhat.com/show_bug.cgi?id=225491

  29 Aug 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-source-2007.ebuild:
  Fix build with USE=doc, integrate binextra into this ebuild

  29 Aug 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-source-2007.ebuild:
  add some dies for mv's

  29 Aug 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-source-2007.ebuild:
  add a changelog
