@@ -25,14 +25,14 @@ SHA256 e043510c72044f82f28f57f409db9a31c5c087429a5304c4ad535afeab2f4273 files/te
 DIST texlive-basicbin-2007.tar.bz2 9408997 RMD160 4e1e2342581964840b554cbffddb60ffd0c0b913 SHA1 9769d4267c0ccf0bfd8ddfd9e5ba4d5e8050ce6d SHA256 dca72f36e4766dd189d6e1c05ad8ab9cd13bd14e7261adbf5d96550231c9eabd
 DIST texlive-binextra-2007.tar.bz2 548629 RMD160 b6bcb710d453fe1005c431aad39969ef7367dae9 SHA1 ec2d05ff4141be3434a15587681d3feb53aec879 SHA256 40536faf32a93d4084b5d7bd3db49da5a6bf2753828ec6478866fd529ad050e4
 DIST texlive-source-2007.tar.bz2 31078286 RMD160 496cb3fa3c5cd9b2ea5da3b0bced67a2b5afe7b9 SHA1 37286f7b962c18ec5234071a8d2dde1499d9ab71 SHA256 96c12147ea9717539553eb6b3be52c2df6163ca617dccc71282ccd39c2e5773b
-EBUILD texlive-source-2007.ebuild 6715 RMD160 9f5b0b3f28449749c9ee1583915052fbffa9d2ff SHA1 31515e1eb6c13b475e40c3ccc83700ee94949510 SHA256 ab3e7ed83d6a279acfd183c152c2569610cc6d442f9cb0a02e6e6fd20e5620c4
-MD5 9089aa111313d48b0950ac5146a76060 texlive-source-2007.ebuild 6715
-RMD160 9f5b0b3f28449749c9ee1583915052fbffa9d2ff texlive-source-2007.ebuild 6715
-SHA256 ab3e7ed83d6a279acfd183c152c2569610cc6d442f9cb0a02e6e6fd20e5620c4 texlive-source-2007.ebuild 6715
-MISC ChangeLog 776 RMD160 bb5e5b2aa153202aad7c89673022ca28edf7abe8 SHA1 9f051bddc49be336f4fee007f306984a784f9fb8 SHA256 e0c4e5896b609257f2496cab9a9bd84995b02c7faeb4f61405ec80e7623a6d7c
-MD5 2f69fb615145fc1ea57826bb87a98c6b ChangeLog 776
-RMD160 bb5e5b2aa153202aad7c89673022ca28edf7abe8 ChangeLog 776
-SHA256 e0c4e5896b609257f2496cab9a9bd84995b02c7faeb4f61405ec80e7623a6d7c ChangeLog 776
+EBUILD texlive-source-2007.ebuild 6749 RMD160 641f050754a5bb0ad0d7fa50c32423f93179b24a SHA1 a6dd8afcb62d50daf167456607cf1cd1dbae4be0 SHA256 a09a5dd71693e93e14d7a4b37d28c27749e0ea9e57332f8c976e3537b087f647
+MD5 2eb4165f4f1a02f237fca54ec5c4485b texlive-source-2007.ebuild 6749
+RMD160 641f050754a5bb0ad0d7fa50c32423f93179b24a texlive-source-2007.ebuild 6749
+SHA256 a09a5dd71693e93e14d7a4b37d28c27749e0ea9e57332f8c976e3537b087f647 texlive-source-2007.ebuild 6749
+MISC ChangeLog 924 RMD160 a153a3e9eb7f50e6ecd211199f1ebe61196e5810 SHA1 0660b48ecf41501be24e8fb788781ffa8959a892 SHA256 eb1e2e354388f6a4994b5b748589f30e170358e87d59214453a9f4a979a192a9
+MD5 0c459177345fc623d07ffc084855173c ChangeLog 924
+RMD160 a153a3e9eb7f50e6ecd211199f1ebe61196e5810 ChangeLog 924
+SHA256 eb1e2e354388f6a4994b5b748589f30e170358e87d59214453a9f4a979a192a9 ChangeLog 924
 MD5 c08daba0c012f7448457e0577ddb3a38 files/digest-texlive-source-2007 807
 RMD160 6087594c27db6643be76c5d5d15e340164c87486 files/digest-texlive-source-2007 807
 SHA256 b84c243a9121c9790cce3cba43a9a7059291d88bd80251c33024dadcd39a0094 files/digest-texlive-source-2007 807
